samples/_failures_safe/1761262641_fafab1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_080c53ab.c: In function ‘main’:
./samples/SAFE/__tmp_080c53ab.c:164:5: error: expected declaration or statement at end of input
  164 |     char input[256];
      |     ^~~~
